--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Beranda</a></li>
-                    <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-black show display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Profil</a><div class="dropdown-menu show" aria-labelledby="dropdown-651" data-bs-popper="none"><a class="dropdown-item text-black text-primary display-4" href="sejarah.html">Sejarah Sekolah</a><a class="show dropdown-item text-black text-primary display-4" href="visidanmisi.html">Visi &amp; Misi</a><a class="dropdown-item text-black text-primary display-4" href="motodantujuan.html">Moto &amp; Tujuan</a><a class="show dropdown-item text-black text-primary display-4" href="strukturorganisasi.html">Struktur Organisasi</a><a class="text-black dropdown-item text-primary display-4" href="fasilitas.html">Fasilitas</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="galeri.html">Galeri</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Informasi</a><div class="dropdown-menu" aria-labelledby="dropdown-528"><a class="dropdown-item text-black text-primary display-4" href="pendaftaran.html">Pendaftaran</a><a class="show dropdown-item text-black text-primary display-4" href="pengumuman.html">Pengumuman</a></div></li>
+                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Profil</a><div class="dropdown-menu" aria-labelledby="dropdown-651"><a class="dropdown-item text-black text-primary display-4" href="sejarah.html">Sejarah Sekolah</a><a class="show dropdown-item text-black text-primary display-4" href="visidanmisi.html">Visi &amp; Misi</a><a class="dropdown-item text-black text-primary display-4" href="motodantujuan.html">Moto &amp; Tujuan</a><a class="show dropdown-item text-black text-primary display-4" href="strukturorganisasi.html">Struktur Organisasi</a><a class="text-black dropdown-item text-primary display-4" href="fasilitas.html">Fasilitas</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="galeri.html">Galeri</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Informasi</a><div class="dropdown-menu" aria-labelledby="dropdown-528"><a class="dropdown-item text-black text-primary display-4" href="pendaftaran.html">Pendaftaran</a><a class="show dropdown-item text-black text-primary display-4" href="pengumuman.html">Pengumuman</a></div></li>
                     <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black show display-4" href="page9.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Alumni</a><div class="dropdown-menu show" aria-labelledby="dropdown-676" data-bs-popper="none"><a class="dropdown-item text-black text-primary display-4" href="alumni.html">Angkatan XXXVII</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="kontak.html">Kontak</a></li></ul>
                 
@@ -129,7 +129,7 @@
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Sambutan Kepala Sekolah</strong></h3>
                     <p class="mbr-text mbr-fonts-style display-7">Assalamu’alaikum wr. wb.<br>Salam sejahtera bagi kita semua<br>Shalom<br>Om Swastyastu<br>Namo Buddhaya<br>Salam Kebajikan<br><br>Puji syukur kita panjatkan kehadirat Tuhan Yang Maha Esa atas rahmat dan karunia-Nya, sehingga kita dapat terus berkarya dan berprestasi dalam dunia pendidikan. Saya merasa bangga dan terhormat dapat menyampaikan kata sambutan ini sebagai Kepala Sekolah Dasar Negeri 007 Malinau Kota.<br>
 <br>Di era digital ini, website sekolah menjadi salah satu sarana penting untuk memberikan informasi dan komunikasi antara sekolah dengan masyarakat, khususnya orang tua siswa. Melalui website ini, kami berharap dapat memberikan informasi yang akurat dan terkini mengenai berbagai kegiatan, program, dan prestasi yang telah dan akan dicapai oleh sekolah kami.<br><br>Kami percaya bahwa pendidikan adalah kunci utama untuk masa depan yang lebih baik. Oleh karena itu, di SDN 007 Malinau Kota, kami berkomitmen untuk menyediakan lingkungan belajar yang kondusif dan inspiratif bagi seluruh siswa. Dengan dukungan penuh dari para guru, orang tua, dan seluruh masyarakat, kami yakin dapat terus meningkatkan kualitas pendidikan di sekolah ini.<br><br>Akhir kata, saya mengucapkan terima kasih kepada seluruh pengunjung website SDN 007 Malinau Kota ini. Semoga website ini dapat menjadi jendela informasi yang bermanfaat.&nbsp;Mari kita bersama-sama berkontribusi untuk mewujudkan masa depan yang gemilang bagi generasi penerus bangsa.<br>
-<br>Wassalamu’alaikum wr. wb.<br>Om Shanti, Shanti, Shanti, Om.<br><br>Hormat Kami,<br>Kepala SDN 007 Malinau Kota<br>MUJI WALUYA, S.Pd<br><br><br></p>
+<br>Wassalamu’alaikum wr. wb.<br>Shalom.<br><br>Hormat Kami,<br>Kepala SDN 007 Malinau Kota<br>MUJI WALUYA, S.Pd<br><br><br></p>
                 </div>
             </div>
         </div>
@@ -150,8 +150,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udJ8L3xN6p-modal" data-bs-target="#udJ8L3xN6p-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-udJ8L3xN6p" data-bs-target="#lb-udJ8L3xN6p">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKT3aTWpl-modal" data-bs-target="#udKT3aTWpl-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -159,8 +159,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Upacara Bendera setiap hari Senin</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udJ8L3xN6p-modal" data-bs-target="#udJ8L3xN6p-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udJ8L3xN6p" data-bs-target="#lb-udJ8L3xN6p">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKT3aTWpl-modal" data-bs-target="#udKT3aTWpl-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -168,8 +168,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Kegiatan Rutin Senam Pagi setiap hari Jum'at</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udJ8L3xN6p-modal" data-bs-target="#udJ8L3xN6p-modal">
-                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udJ8L3xN6p" data-bs-target="#lb-udJ8L3xN6p">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKT3aTWpl-modal" data-bs-target="#udKT3aTWpl-modal">
+                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -177,8 +177,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Kegiatan Rutin Giat Literasi Jum'at</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udJ8L3xN6p-modal" data-bs-target="#udJ8L3xN6p-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udJ8L3xN6p" data-bs-target="#lb-udJ8L3xN6p">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKT3aTWpl-modal" data-bs-target="#udKT3aTWpl-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -187,11 +187,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="udJ8L3xN6p-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="udKT3aTWpl-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-udJ8L3xN6p" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-udKT3aTWpl" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder">
@@ -207,18 +207,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-udJ8L3xN6p" data-bs-target="#lb-udJ8L3xN6p"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udJ8L3xN6p" data-bs-target="#lb-udJ8L3xN6p"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udJ8L3xN6p" data-bs-target="#lb-udJ8L3xN6p"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udJ8L3xN6p" data-bs-target="#lb-udJ8L3xN6p"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-udJ8L3xN6p">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-udKT3aTWpl">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-udJ8L3xN6p">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-udKT3aTWpl">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -281,7 +281,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
