create github pages

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<div class="align-center container">
 		<div class="row justify-content-center">
 			<div class="col-md-12 content-head">
-				<h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong><br></strong><br><strong>SDN 007 MALINAU KOTA</strong></h1>
+				<h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><br><strong>SDN 007 MALINAU KOTA</strong></h1>
 				<p class="mbr-text mbr-fonts-style mb-4 display-7"><strong><em>"Bersih, Elok, Religius, Kondusif, Aman, Harmonis"</em></strong></p>
 				
 			</div>
@@ -150,8 +150,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKT3aTWpl-modal" data-bs-target="#udKT3aTWpl-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKTZhfrbB-modal" data-bs-target="#udKTZhfrbB-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-udKTZhfrbB" data-bs-target="#lb-udKTZhfrbB">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -159,8 +159,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Upacara Bendera setiap hari Senin</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKT3aTWpl-modal" data-bs-target="#udKT3aTWpl-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKTZhfrbB-modal" data-bs-target="#udKTZhfrbB-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udKTZhfrbB" data-bs-target="#lb-udKTZhfrbB">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -168,8 +168,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Kegiatan Rutin Senam Pagi setiap hari Jum'at</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKT3aTWpl-modal" data-bs-target="#udKT3aTWpl-modal">
-                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKTZhfrbB-modal" data-bs-target="#udKTZhfrbB-modal">
+                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udKTZhfrbB" data-bs-target="#lb-udKTZhfrbB">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -177,8 +177,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Kegiatan Rutin Giat Literasi Jum'at</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKT3aTWpl-modal" data-bs-target="#udKT3aTWpl-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udKTZhfrbB-modal" data-bs-target="#udKTZhfrbB-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udKTZhfrbB" data-bs-target="#lb-udKTZhfrbB">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -187,11 +187,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="udKT3aTWpl-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="udKTZhfrbB-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-udKT3aTWpl" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-udKTZhfrbB" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder">
@@ -207,18 +207,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udKT3aTWpl" data-bs-target="#lb-udKT3aTWpl"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-udKTZhfrbB" data-bs-target="#lb-udKTZhfrbB"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udKTZhfrbB" data-bs-target="#lb-udKTZhfrbB"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udKTZhfrbB" data-bs-target="#lb-udKTZhfrbB"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udKTZhfrbB" data-bs-target="#lb-udKTZhfrbB"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-udKT3aTWpl">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-udKTZhfrbB">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-udKT3aTWpl">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-udKTZhfrbB">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -281,7 +281,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Best AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
