create github pages

--- a/strukturorganisasi.html
+++ b/strukturorganisasi.html
@@ -93,7 +93,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
                 <div class="image-wrapper">
-                    <img src="assets/images/untitled-diagram.drawio-1-1370x880.png" alt="Mobirise Website Builder">
+                    <img src="assets/images/ini-1370x880.png" alt="Mobirise Website Builder">
                     
                 </div>
             </div>
