--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Beranda</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Profil</a><div class="dropdown-menu" aria-labelledby="dropdown-651"><a class="dropdown-item text-black display-4" href="sejarah.html">Sejarah Sekolah</a><a class="show dropdown-item text-black display-4" href="visidanmisi.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="motodantujuan.html">Moto &amp; Tujuan</a><a class="show dropdown-item text-black display-4" href="strukturorganisasi.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="fasilitas.html">Fasilitas</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="galeri.html">Galeri</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Informasi</a><div class="dropdown-menu" aria-labelledby="dropdown-528"><a class="dropdown-item text-black display-4" href="pendaftaran.html">Pendaftaran</a><a class="show dropdown-item text-black display-4" href="pengumuman.html">Pengumuman</a></div></li>
+                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Profil</a><div class="dropdown-menu" aria-labelledby="dropdown-651"><a class="dropdown-item text-black display-4" href="sejarah.html">Sejarah Sekolah</a><a class="show dropdown-item text-black display-4" href="visidanmisi.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="motodantujuan.html">Moto &amp; Tujuan</a><a class="show dropdown-item text-black display-4" href="strukturorganisasi.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="fasilitas.html">Fasilitas</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="galeri.html">Galeri</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Informasi</a><div class="dropdown-menu" aria-labelledby="dropdown-528"><a class="dropdown-item text-black display-4" href="pendaftaran.html">Pendaftaran</a><a class="show dropdown-item text-black display-4" href="pengumuman.html">Pengumuman</a></div></li>
                     <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page9.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Alumni</a><div class="dropdown-menu" aria-labelledby="dropdown-676"><a class="dropdown-item text-black display-4" href="alumni.html">Angkatan XXXVII</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontak.html">Kontak</a></li></ul>
                 
@@ -69,7 +69,7 @@
 	
 
 	
-	<div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);"></div>
+	<div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(57, 62, 70);"></div>
 	
 	<div class="align-center container">
 		<div class="row justify-content-center">
@@ -150,48 +150,48 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udLxyIhjFd-modal" data-bs-target="#udLxyIhjFd-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-udLxyIhjFd" data-bs-target="#lb-udLxyIhjFd">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udLLCyoiTR-modal" data-bs-target="#udLLCyoiTR-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-udLLCyoiTR" data-bs-target="#lb-udLLCyoiTR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Upacara Bendera setiap hari Senin</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br><strong>Upacara Bendera setiap hari Senin</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udLxyIhjFd-modal" data-bs-target="#udLxyIhjFd-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udLxyIhjFd" data-bs-target="#lb-udLxyIhjFd">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udLLCyoiTR-modal" data-bs-target="#udLLCyoiTR-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udLLCyoiTR" data-bs-target="#lb-udLLCyoiTR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Kegiatan Rutin Senam Pagi setiap hari Jum'at</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br><strong>Kegiatan Rutin Senam Pagi setiap hari Jum'at</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udLxyIhjFd-modal" data-bs-target="#udLxyIhjFd-modal">
-                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udLxyIhjFd" data-bs-target="#lb-udLxyIhjFd">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udLLCyoiTR-modal" data-bs-target="#udLLCyoiTR-modal">
+                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udLLCyoiTR" data-bs-target="#lb-udLLCyoiTR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Kegiatan Rutin Giat Literasi Jum'at</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br><strong>Kegiatan Rutin Giat Literasi Jum'at</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udLxyIhjFd-modal" data-bs-target="#udLxyIhjFd-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udLxyIhjFd" data-bs-target="#lb-udLxyIhjFd">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udLLCyoiTR-modal" data-bs-target="#udLLCyoiTR-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udLLCyoiTR" data-bs-target="#lb-udLLCyoiTR">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
-                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br>Kegiatan P5, Kegiatan Projek Kurikulum Merdeka</h6>
+                <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong><br>Kegiatan P5, Kegiatan Projek Kurikulum Merdeka</strong></h6>
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="udLxyIhjFd-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="udLLCyoiTR-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-udLxyIhjFd" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-udLLCyoiTR" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder">
@@ -207,18 +207,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-udLxyIhjFd" data-bs-target="#lb-udLxyIhjFd"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udLxyIhjFd" data-bs-target="#lb-udLxyIhjFd"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udLxyIhjFd" data-bs-target="#lb-udLxyIhjFd"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udLxyIhjFd" data-bs-target="#lb-udLxyIhjFd"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-udLLCyoiTR" data-bs-target="#lb-udLLCyoiTR"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udLLCyoiTR" data-bs-target="#lb-udLLCyoiTR"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udLLCyoiTR" data-bs-target="#lb-udLLCyoiTR"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udLLCyoiTR" data-bs-target="#lb-udLLCyoiTR"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-udLxyIhjFd">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-udLLCyoiTR">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-udLxyIhjFd">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-udLLCyoiTR">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -281,7 +281,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">Free AI Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
