--- a/kontak.html
+++ b/kontak.html
@@ -99,13 +99,13 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <span class="mbr-iconfont socicon-whatsapp socicon" style="color: rgb(191, 33, 62); fill: rgb(191, 33, 62);"></span>
+                        <span class="mbr-iconfont socicon-whatsapp socicon" style="color: rgb(227, 36, 43); fill: rgb(227, 36, 43);"></span>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>WhatsApp</strong></h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="https://wa.me/6281350188914" class="text-primary">0813 5018 8914</a>&nbsp;(Kepala Sekolah)<br><a href="https://wa.me/6281249210671" class="text-primary">0812 4921 0671</a> (Waka Kurikulum)<br></p>
+                            <a href="https://wa.me/6281350188914" class="text-success">0813 5018 8914</a>&nbsp;(Kepala Sekolah)<br><a href="https://wa.me/6281249210671" class="text-success">0812 4921 0671</a> (Waka Kurikulum)<br></p>
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                             <strong>Email</strong>
                         </h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="mailto:info@site.com" class="text-primary">sdn007malkot0708@gmail.com</a>
+                            <a href="mailto:info@site.com" class="text-success">sdn007malkot0708@gmail.com</a>
                         </p>
                     </div>
                 </div>
@@ -144,8 +144,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Jam Operasional</strong></h6>
-                        <p class="mbr-text mbr-fonts-style display-7">07:15 - 17:00
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Senin - Sabtu : 07:00 - 14:30<br></p>
                     </div>
                 </div>
             </div>
@@ -218,7 +217,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise.com </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
