create github pages

--- a/page13.html
+++ b/page13.html
@@ -99,10 +99,10 @@
                     <div class="card-box align-left">
                         <h4 class="card-title mbr-fonts-style mbr-white mb-3 display-1">
                             <strong>Syarat Penerimaan Peserta Didik Baru (PPDB)</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">1.&nbsp; Foto copy Akte kelahiran 1 lembar
+                        <p class="mbr-text mbr-fonts-style display-7">1.&nbsp; Foto copy Akta kelahiran 1 lembar
 <br>2. Foto copy Kartu Keluarga 1 lembar
 <br>3. Foto copy KTP ayah dan ibu 1 lembar
-<br>4. Pas foto berwarna 3×4 sebanyak 1 lembar
+<br>4. Pas foto warna 3×4 sebanyak 4 lembar
 <br>5. Foto copy Ijazah TK (Jika&nbsp;ada)&nbsp;1&nbsp;lembar</p>
                         
                     </div>
@@ -139,7 +139,7 @@
                     </div>
                     <div class="text-box">
                         <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7"><strong>24 - 26 Juni 2024</strong></h4>
-                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">Pembukaan atau mulai Pendaftaran PPDB</h5>
+                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">Pembukaan atau mulai Pendaftaran PPDB<br>Peserta Didik Baru dapat mendatangi sekolah untuk melakukan Pendaftaran</h5>
                     </div>
                 </div>
                 <div class="item mbr-flex">
@@ -257,7 +257,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">Free AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
