--- a/pengumuman.html
+++ b/pengumuman.html
@@ -182,7 +182,7 @@
                         <strong>Kontak Kami</strong></h5>
                     <ul class="list mbr-fonts-style display-7">
                         <li class="mbr-text item-wrap">WhatsApp : <a href="https://wa.me/6281350188914" class="text-primary">0813 5018 8914</a>&nbsp;(Kepala Sekolah)</li>
-                        <li class="mbr-text item-wrap">WhatsApp : 0812 4921 0671 (Guru Kurikulum)</li>
+                        <li class="mbr-text item-wrap">WhatsApp : <a href="https://wa.me/62812 4921 0671" class="text-primary">0812 4921 0671</a> (Guru Kurikulum)</li>
                         <li class="mbr-text item-wrap">Email : <a href="mailto:sdn007malkot0708@gmail.com" class="text-primary">sdn007malkot0708@gmail.com</a></li><li class="mbr-text item-wrap">Alamat : Desa Pelita Kanaan, Kec. Malinau Kota, Kabupaten Malinau, Kalimantan Utara</li>
                     </ul>
                     </div>
@@ -210,7 +210,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3090057" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
