justify index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Selamat Datang&nbsp;</strong><br><strong>di situs resmi SDN 007 Malinau Kota</strong><strong><br></strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7"><br>Terimakasih telah berkunjung di website kami.<br><br> Anda dapat melihat informasi apa saja mengenai profil, penerimaan siswa baru,&nbsp; pengumuman, serta informasi lainnya tentang SDN 007 Malinau Kota.</p>
+                    <p class="mbr-text mbr-fonts-style display-7" style="text-align: justify;"><br>Terimakasih telah berkunjung di website kami.<br><br> Anda dapat melihat informasi apa saja mengenai profil, penerimaan siswa baru,&nbsp; pengumuman, serta informasi lainnya tentang SDN 007 Malinau Kota.</p>
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Sambutan Kepala Sekolah</strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Assalamu’alaikum wr. wb.<br>Salam sejahtera bagi kita semua<br>Shalom<br>Om Swastyastu<br>Namo Buddhaya<br>Salam Kebajikan<br><br>Puji syukur kita panjatkan kehadirat Tuhan Yang Maha Esa atas rahmat dan karunia-Nya, sehingga kita dapat terus berkarya dan berprestasi dalam dunia pendidikan. Saya merasa bangga dan terhormat dapat menyampaikan kata sambutan ini sebagai Kepala Sekolah Dasar Negeri 007 Malinau Kota.<br>
+                    <p class="mbr-text mbr-fonts-style display-7" style="text-align: justify;">Assalamu’alaikum wr. wb.<br>Salam sejahtera bagi kita semua<br>Shalom<br>Om Swastyastu<br>Namo Buddhaya<br>Salam Kebajikan<br><br>Puji syukur kita panjatkan kehadirat Tuhan Yang Maha Esa atas rahmat dan karunia-Nya, sehingga kita dapat terus berkarya dan berprestasi dalam dunia pendidikan. Saya merasa bangga dan terhormat dapat menyampaikan kata sambutan ini sebagai Kepala Sekolah Dasar Negeri 007 Malinau Kota.<br>
 <br>Di era digital ini, website sekolah menjadi salah satu sarana penting untuk memberikan informasi dan komunikasi antara sekolah dengan masyarakat, khususnya orang tua siswa. Melalui website ini, kami berharap dapat memberikan informasi yang akurat dan terkini mengenai berbagai kegiatan, program, dan prestasi yang telah dan akan dicapai oleh sekolah kami.<br><br>Kami percaya bahwa pendidikan adalah kunci utama untuk masa depan yang lebih baik. Oleh karena itu, di SDN 007 Malinau Kota, kami berkomitmen untuk menyediakan lingkungan belajar yang kondusif dan inspiratif bagi seluruh siswa. Dengan dukungan penuh dari para guru, orang tua, dan seluruh masyarakat, kami yakin dapat terus meningkatkan kualitas pendidikan di sekolah ini.<br><br>Akhir kata, saya mengucapkan terima kasih kepada seluruh pengunjung website SDN 007 Malinau Kota ini. Semoga website ini dapat menjadi jendela informasi yang bermanfaat.&nbsp;Mari kita bersama-sama berkontribusi untuk mewujudkan masa depan yang gemilang bagi generasi penerus bangsa.<br>
 <br>Wassalamu’alaikum wr. wb.<br>Shalom.<br><br>Hormat Kami,<br>Kepala SDN 007 Malinau Kota<br>MUJI WALUYA, S.Pd<br><br><br></p>
                 </div>
