justify sejarah.html

--- a/sejarah.html
+++ b/sejarah.html
@@ -97,7 +97,7 @@
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
                         
-                        <p class="mbr-text mbr-fonts-style mb-4 display-4">SD Negeri 007 Malinau Kota merupakan sekolah dasar negeri yang terletak di Kabupaten Malinau, Provinsi Kalimantan Utara. Sekolah ini telah beroperasi sejak tahun 1981 berdasarkan Surat Keterangan Izin Beroperasional tertanggal 1 Januari 1981. Dengan luas lahan sebesar 1462 m², sekolah ini menawarkan lingkungan yang memadai untuk kegiatan belajar mengajar bagi para siswanya.
+                        <p class="mbr-text mbr-fonts-style mb-4 display-4" style="text-align: justify;">SD Negeri 007 Malinau Kota merupakan sekolah dasar negeri yang terletak di Kabupaten Malinau, Provinsi Kalimantan Utara. Sekolah ini telah beroperasi sejak tahun 1981 berdasarkan Surat Keterangan Izin Beroperasional tertanggal 1 Januari 1981. Dengan luas lahan sebesar 1462 m², sekolah ini menawarkan lingkungan yang memadai untuk kegiatan belajar mengajar bagi para siswanya.
 <br>
 <br>Selama lebih dari empat dekade, SD Negeri 007 Malinau Kota telah berkontribusi penting dalam mencetak generasi muda yang berpendidikan dan berprestasi di Kabupaten Malinau. Sekolah ini terus mengembangkan fasilitas yang tersedia untuk mendukung kegiatan belajar dan mengajar siswa. Dengan komitmen yang tinggi terhadap mutu pendidikan, SD Negeri 007 Malinau Kota terus berupaya menjadi institusi pendidikan dasar yang unggul dan dapat diandalkan di tengah masyarakat.</p>
                         
